feat: add categories, courses api. Change database arch
