# src/main/java/com/github/scripting/programming/language/interview_sim_backend/entity/Answer.java
@@ -1,0 +1,45 @@
+package com.github.scripting.programming.language.interview_sim_backend.entity;
+
+import jakarta.persistence.*;
+import lombok.*;
+import org.hibernate.annotations.CreationTimestamp;
+import org.springframework.data.annotation.Id;
+
+import java.time.ZonedDateTime;
+
+@Entity
+@Table(schema = "user_data", name = "answer_tab")
+@Getter
+@Setter
+@ToString
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class Answer {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "attempt_id", nullable = false)
+    @ToString.Exclude
+    private Attempt attempt;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "question_id", nullable = false)
+    @ToString.Exclude
+    private Question question;
+
+    @Column(columnDefinition = "TEXT")
+    private String userAnswer;
+
+    @Column(name = "score")
+    private Integer score;
+
+    @Column(name = "feedback", columnDefinition = "TEXT")
+    private String feedback;
+
+    @CreationTimestamp
+    @Column(name = "created_at", nullable = false, updatable = false)
+    private ZonedDateTime createdAt;
+}
